--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
 
   "name": "Tunnistehaku",
   "description": "Haku Melindasta tietuetunnuksella tai MARC21-formaatista kenttäkoodilla",
-  "version": "1.0",
+  "version": "0.1",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "book.png",
     "default_popup": "redirect.html"
   },
   "permissions": [
