--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Tuomo Virolainen <tuomo.virolainen@helsinki.fi>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "lodash": "^4.16.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
@@ -19,6 +18,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^1.14.0"
   }
 }
