--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "Tunnistehaku",
-  "version": "1.0.2",
-  "description": "A Chrome addon for Finnish scientific libraries",
-  "main": "./build/query.js",
+  "name": "tunnistehaku",
+  "version": "0.1.0",
   "scripts": {
-    "build": "./node_modules/.bin/webpack"
+    "build": "bsb -make-world",
+    "start": "bsb -make-world -w",
+    "clean": "bsb -clean-world",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack -w",
+    "webpack:production": "NODE_ENV=production webpack",
+    "server": "webpack-dev-server"
   },
-  "keywords": [],
-  "author": "Tuomo Virolainen <tuomo.virolainen@helsinki.fi>",
-  "license": "AGPL-3.0",
+  "keywords": [
+    "BuckleScript"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "reason-react": ">=0.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^1.14.0"
+    "bs-platform": "^4.0.14",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.8"
   }
 }
